--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 />
               </form>
               <p class="dropdown-text">
-                Sorry, No Result for Your Search, Please Try Something Else
+                Sorry, no result for your search, please try something else
               </p>
             </div>
           </div>
@@ -164,14 +164,17 @@
               <div id="exhibitions-dropdown" class="dropdown-info">
                 <p class="header">
                   Our more than 1000 unique exhibitions are divided into 5 main
-                  spaces for you to explore
+                  spaces for you to explore:
                 </p>
-                <p>These spaces include:</p>
-                <p>
-                  Cosmology, Evolution, Biology & Medicine, Robotics & AI and
-                  Ecology
-                </p>
-                <p>Click to Learn More...</p>
+                <hr />
+                <ul class="dropdown-list">
+                  <li>Cosmology</li>
+                  <li>Evolution</li>
+                  <li>Biology & Medicine</li>
+                  <li>Robotics & AI</li>
+                  <li>Ecology</li>
+                </ul>
+                <!-- <p class="learn-more">Click to Learn More...</p> -->
               </div>
             </a>
           </li>
@@ -181,18 +184,18 @@
               <div id="explore-dropdown" class="dropdown-info">
                 <p class="header">
                   Here you can learn more about what we can offer, wheter you
-                  are:
+                  are a:
                 </p>
-                <p>
-                  A kid or a parent of a kid who would like to join one of our
-                  clubs.
-                </p>
-                <p>
-                  A teacher who would like to bring your students for a guided
-                  tour.
-                </p>
-                <p>Or a researcher who would like to join our team.</p>
-                <p>Click to Learn More...</p>
+                <hr />
+                <ul class="dropdown-list">
+                  <li>Kid who would like to join one of our clubs.</li>
+                  <li>
+                    Teacher who would like to bring your students for a guided
+                    tour.
+                  </li>
+                  <li>Researcher who would like to join our team.</li>
+                </ul>
+                <!-- <p class="learn-more">Click to Learn More...</p> -->
               </div>
             </a>
           </li>
@@ -204,13 +207,15 @@
               <div id="get-involved-dropdown" class="dropdown-info">
                 <p class="header">
                   In order for us to create the best museum possible we need
-                  your contribution.
+                  your contribution, support us through:
                 </p>
-                <p>
-                  You can support our museum through donations, volunteering and
-                  intenships.
-                </p>
-                <p>Click to learn more...</p>
+                <hr />
+                <ul class="dropdown-list">
+                  <li>Donations</li>
+                  <li>Volunteering</li>
+                  <li>Intenships</li>
+                </ul>
+                <!-- <p class="learn-more">Click to learn more...</p> -->
               </div>
             </a>
           </li>
@@ -219,8 +224,14 @@
             <a href="visit.html">
               <div id="visit-dropdown" class="dropdown-info">
                 <p class="header">All you need to know about:</p>
-                <p>Admission, location, opening hours and our facilities.</p>
-                <p>Click to learn more...</p>
+                <hr />
+                <ul class="dropdown-list">
+                  <li>Admission</li>
+                  <li>Location</li>
+                  <li>Opening Hours</li>
+                  <li>Facilities</li>
+                </ul>
+                <!-- <p class="learn-more">Click to learn more...</p> -->
               </div>
             </a>
           </li>
@@ -243,19 +254,17 @@
               >
             </div>
           </section>
-          <aside>
+          <a href="about_us.html">
             <div class="bubble">
               <div class="arrow-up"></div>
-              <a href="about_us.html">
-                <h3>Let Us Explore Together</h3>
-                <div id="about">
-                  <p>Learn more ABOUT US and our VISON</p>
-                  <span class="fa fa-arrow-circle-right"></span>
-                </div>
-              </a>
+              <h3>Let Us Explore Together</h3>
+              <div id="about">
+                <p>Learn more ABOUT US and our VISON</p>
+                <span class="fa fa-arrow-circle-right"></span>
+              </div>
               <div class="arrow-down"></div>
             </div>
-          </aside>
+          </a>
         </div>
       </div>
       <div class="fading-background_1"></div>
@@ -435,140 +444,6 @@
               />
             </div>
           </div>
-
-          <!-- <label class="aeronautic-label" for="aeronautic">
-            <div id="aeronautic-image">
-              <img
-                src="images\aeronautic.jpg"
-                alt="A jet pilot in full flight outfit sitting in a simulated cockpit facing the instruments"
-              />
-            </div>
-          </label>
-          <input type="checkbox" id="aeronautic" />
-          <div class="aeronautic-wrapper">
-            <figure class="news">
-              <img
-                src="images\aeronautic.jpg"
-                alt="A jet pilot in full flight outfit sitting in a simulated cockpit facing the instruments"
-                class="mobile"
-              />
-              <img
-                src="images\aeronautic_medium.jpg"
-                alt="A jet pilot in full flight outfit sitting in a simulated cockpit facing the instruments"
-                class="medium"
-              />
-              <img
-                src="images\aeronautic.jpg"
-                alt="A jet pilot in full flight outfit sitting in a simulated cockpit facing the instruments"
-                class="large-screen"
-              />
-            </figure>
-            <div class="circle-wrapper">
-              <div class="selected"></div>
-              <div></div>
-              <div></div>
-            </div>
-            <div class="news">
-              <div>
-                <h5>Visiting Professor Of Aeronautics</h5>
-                <p>
-                  It is our pleasure to announce that Professor Sheila Widnall
-                  from the Massachusetts Institue of Technology will visit our
-                  museum.
-                </p>
-                <p>
-                  She will be delivering two lectures on the development of
-                  aeronautics, and where the future lies in this exciting space.
-                </p>
-              </div>
-            </div>
-          </div>
-          <label class="energica-label" for="energica">
-            <div id="energica-image">
-              <img
-                src="images\energica.jpg"
-                alt="Close up photo of a glowing red sphere with beams of electricity radiating from it"
-              />
-            </div>
-          </label>
-          <input type="checkbox" id="energica" />
-          <div class="energica-wrapper">
-            <figure class="news">
-              <img
-                src="images\energica.jpg"
-                alt="Close up photo of a glowing red sphere with beams of electricity radiating from it"
-                class="mobile"
-              />
-              <img
-                src="images\energica_medium.jpg"
-                alt="Close up photo of a glowing red sphere with beams of electricity radiating from it"
-                class="medium"
-              />
-              <img
-                src="images\energica.jpg"
-                alt="Close up photo of a glowing red sphere with beams of electricity radiating from it"
-                class="large-screen"
-              />
-            </figure>
-            <div class="circle-wrapper">
-              <div></div>
-              <div></div>
-              <div class="selected"></div>
-            </div>
-            <div class="news">
-              <div>
-                <h5>Energica Exhibition</h5>
-                <p>
-                  On loan from the NEMO Science Museum in Amsterdam, the
-                  Energetica exhibition is coming to the Community Science
-                  Museum.
-                </p>
-                <p>
-                  It’s a series of installations that allow visitors to
-                  experience the power of the elements as we harness them. From
-                  solar energy powering lighting, to ‘Wind Island’ that shows
-                  how turbines are able to use and control wind to create power.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="news-wrapper">
-            <figure class="news">
-              <img
-                src="images\t-rex.jpg"
-                alt="Close up photo of the head of a of gaping T-Rex sceleton, exposing all it's razorsharp teeth"
-                class="mobile"
-              />
-              <img
-                src="images\t-rex_medium.jpg"
-                alt="Close up photo of the head of a of gaping T-Rex sceleton, exposing all it's razorsharp teeth"
-                class="medium"
-              />
-              <img
-                src="images\t-rex.jpg"
-                alt="Close up photo of the head of a of gaping T-Rex sceleton, exposing all it's razorsharp teeth"
-                class="large-screen"
-              />
-            </figure>
-            <div class="circle-wrapper">
-              <div></div>
-              <div class="selected"></div>
-              <div></div>
-            </div>
-            <div class="news" id="large-text">
-              <div>
-                <h5>Night in the Museum</h5>
-                <p>
-                  Get your family together for an exciting night in the museum
-                  as you sleep over beside dinosaurs and science displays.
-                </p>
-                <p>
-                  Bring your own sleeping bag and get ready to rough it as we go
-                  exploring the wonders of science.
-                </p>
-              </div>
-            </div>
-          </div> -->
         </section>
         <section class="clubs">
           <h4 id="clubs">Join One of Our Children Clubs</h4>
@@ -592,31 +467,41 @@
               >
             </figure>
           </div>
-          <p>Click Images to Learn More</p>
+          <!-- <p>Click Images to Learn More</p> -->
         </section>
       </div>
-      <div class="newsletter-wrapper">
-        <div class="blur">
-          <section class="newsletter">
-            <p>
-              Sign up to our Newsletter and be the first to know about Our
-              exciting New stuff:
-            </p>
-            <form action="form-success.php" method="get" class="newsletter">
-              <input
-                id="newsletter"
-                type="text"
-                name="email"
-                placeholder="YOUR EMAIL"
-              />
-              <input
-                id="sign-up"
-                type="submit"
-                name="subscribe"
-                value="SIGN UP"
-              />
-            </form>
-          </section>
+      <div class="bottom-section">
+        <div class="newsletter-wrapper">
+          <div class="blur">
+            <section class="newsletter">
+              <label for="newsletter">
+                Sign up to our Newsletter and be the first to know about Our
+                exciting New stuff:
+              </label>
+              <div class="newsletter-success">
+                Welcome! Please check your inbox
+              </div>
+              <form class="newsletter">
+                <input
+                  id="newsletter"
+                  type="text"
+                  name="email"
+                  placeholder="YOUR EMAIL"
+                />
+
+                <input
+                  id="sign-up"
+                  type="submit"
+                  name="subscribe"
+                  value="SIGN UP"
+                />
+              </form>
+              <p id="newsletter-error" class="error-message">
+                Please enter a valid e-mail address
+              </p>
+              
+            </section>
+          </div>
         </div>
       </div>
     </main>
