all pages updated

--- a/about_us.html
+++ b/about_us.html
@@ -384,6 +384,8 @@
           </div>
         </div>
       </div>
+      <div class="fading-background_1"></div>
+      <div class="fading-background_2"></div>
     </main>
 
     <footer>
