--- a/explore.html
+++ b/explore.html
@@ -178,7 +178,7 @@
             </a>
           </li>
           <li id="explore-wrapper" class="info-wrapper">
-            <a href="explore.html" class="link-box2 inactive">EXPLORE</a>
+            <a href="explore.html" class="link-box2">EXPLORE</a>
             <a href="explore.html">
               <div id="explore-dropdown" class="dropdown-info">
                 <p class="header">
@@ -239,9 +239,9 @@
     </header>
 
     <main>
-      <div class="main-wrapper">
       <h1 class="mobile">Explore</h1>
-      <h1 class="large-screen">More To Explore</h1>
+      <div class="main-wrapper">
+        <h1 class="large-screen">More To Explore</h1>
         <section class="kids">
           <div class="blue margins" id="item-1">
             <h2>For Kids</h2>
@@ -356,7 +356,6 @@
               <p id="newsletter-error" class="error-message">
                 Please enter a valid e-mail address
               </p>
-              
             </section>
           </div>
         </div>
