--- a/get_involved.html
+++ b/get_involved.html
@@ -197,9 +197,7 @@
             </a>
           </li>
           <li id="get-involved-wrapper" class="info-wrapper">
-            <a href="get_involved.html" class="link-box3 inactive"
-              >GET INVOLVED</a
-            >
+            <a href="get_involved.html" class="link-box3">GET INVOLVED</a>
             <a href="get_involved.html">
               <div id="get-involved-dropdown" class="dropdown-info">
                 <p class="header">
@@ -237,11 +235,11 @@
     </header>
 
     <main>
-      <div class="main-wrapper">
-        <hgroup>
+      <hgroup>
           <h1 class="mobile">Get involved</h1>
           <h4>You can support our museum in various ways:</h4>
         </hgroup>
+      <div class="main-wrapper"> 
         <h1 class="large-screen">You can support our museum in various ways</h1>
         <section class="main-content">
           <div class="support">
@@ -290,7 +288,8 @@
           <p>Do you want to help us out?</p>
           <a href="contact.html"><p class="button">GET IN TOUCH</p></a>
         </div>
-        <div class="bottom-section">
+      </div>
+      <div class="bottom-section">
         <div class="newsletter-wrapper">
           <div class="blur">
             <section class="newsletter">
@@ -319,13 +318,12 @@
               <p id="newsletter-error" class="error-message">
                 Please enter a valid e-mail address
               </p>
-              
             </section>
           </div>
         </div>
       </div>
-      </div>
-       <div class="fading-background_1"></div>
+
+      <div class="fading-background_1"></div>
       <div class="fading-background_2"></div>
     </main>
 
@@ -404,6 +402,5 @@
       <p id="copyright">Community Science Museum 2020</p>
     </footer>
     <script src="js/in_common.js"></script>
-    <script src="js/index.js"></script>
   </body>
 </html>
