--- a/visit.html
+++ b/visit.html
@@ -219,7 +219,7 @@
             </a>
           </li>
           <li id="visit-wrapper" class="info-wrapper">
-            <a href="visit.html" class="link-box4 inactive">VISIT</a>
+            <a href="visit.html" class="link-box4">VISIT</a>
             <a href="visit.html">
               <div id="visit-dropdown" class="dropdown-info">
                 <p class="header">All you need to know about:</p>
@@ -345,39 +345,38 @@
           </div>
         </section>
         <div class="bottom-section">
-        <div class="newsletter-wrapper">
-          <div class="blur">
-            <section class="newsletter">
-              <label for="newsletter">
-                Sign up to our Newsletter and be the first to know about Our
-                exciting New stuff:
-              </label>
-              <div class="newsletter-success">
-                Welcome! Please check your inbox
-              </div>
-              <form class="newsletter">
-                <input
-                  id="newsletter"
-                  type="text"
-                  name="email"
-                  placeholder="YOUR EMAIL"
-                />
+          <div class="newsletter-wrapper">
+            <div class="blur">
+              <section class="newsletter">
+                <label for="newsletter">
+                  Sign up to our Newsletter and be the first to know about Our
+                  exciting New stuff:
+                </label>
+                <div class="newsletter-success">
+                  Welcome! Please check your inbox
+                </div>
+                <form class="newsletter">
+                  <input
+                    id="newsletter"
+                    type="text"
+                    name="email"
+                    placeholder="YOUR EMAIL"
+                  />
 
-                <input
-                  id="sign-up"
-                  type="submit"
-                  name="subscribe"
-                  value="SIGN UP"
-                />
-              </form>
-              <p id="newsletter-error" class="error-message">
-                Please enter a valid e-mail address
-              </p>
-              
-            </section>
+                  <input
+                    id="sign-up"
+                    type="submit"
+                    name="subscribe"
+                    value="SIGN UP"
+                  />
+                </form>
+                <p id="newsletter-error" class="error-message">
+                  Please enter a valid e-mail address
+                </p>
+              </section>
+            </div>
           </div>
         </div>
-      </div>
       </div>
       <div class="fading-background_1"></div>
       <div class="fading-background_2"></div>
@@ -457,7 +456,7 @@
       </div>
       <p id="copyright">Community Science Museum 2020</p>
     </footer>
-     <script src="js/in_common.js"></script>
+    <script src="js/in_common.js"></script>
     <script src="js/index.js"></script>
   </body>
 </html>
