--- a/exhibitions.html
+++ b/exhibitions.html
@@ -155,9 +155,7 @@
         </ul>
         <ul class="large-screen">
           <li id="exhibition-wrapper" class="info-wrapper">
-            <a href="exhibitions.html" class="link-box1 inactive"
-              >EXHIBITIONS</a
-            >
+            <a href="exhibitions.html" class="link-box1">EXHIBITIONS</a>
             <a href="exhibitions.html">
               <div id="exhibitions-dropdown" class="dropdown-info">
                 <p class="header">
@@ -533,39 +531,38 @@
           <p class="visit">"More Than 1000 Unique Exhibits to Explore"</p>
         </section>
         <div class="bottom-section">
-        <div class="newsletter-wrapper">
-          <div class="blur">
-            <section class="newsletter">
-              <label for="newsletter">
-                Sign up to our Newsletter and be the first to know about Our
-                exciting New stuff:
-              </label>
-              <div class="newsletter-success">
-                Welcome! Please check your inbox
-              </div>
-              <form class="newsletter">
-                <input
-                  id="newsletter"
-                  type="text"
-                  name="email"
-                  placeholder="YOUR EMAIL"
-                />
+          <div class="newsletter-wrapper">
+            <div class="blur">
+              <section class="newsletter">
+                <label for="newsletter">
+                  Sign up to our Newsletter and be the first to know about Our
+                  exciting New stuff:
+                </label>
+                <div class="newsletter-success">
+                  Welcome! Please check your inbox
+                </div>
+                <form class="newsletter">
+                  <input
+                    id="newsletter"
+                    type="text"
+                    name="email"
+                    placeholder="YOUR EMAIL"
+                  />
 
-                <input
-                  id="sign-up"
-                  type="submit"
-                  name="subscribe"
-                  value="SIGN UP"
-                />
-              </form>
-              <p id="newsletter-error" class="error-message">
-                Please enter a valid e-mail address
-              </p>
-              
-            </section>
+                  <input
+                    id="sign-up"
+                    type="submit"
+                    name="subscribe"
+                    value="SIGN UP"
+                  />
+                </form>
+                <p id="newsletter-error" class="error-message">
+                  Please enter a valid e-mail address
+                </p>
+              </section>
+            </div>
           </div>
         </div>
-      </div>
       </div>
       <div class="fading-background_1"></div>
       <div class="fading-background_2"></div>
